<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.edu.zucc.angelroot.userinterface.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:background="#AACCFF"
        android:padding="12dp"
        android:text="Hello World!" />

    <AnalogClock
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:id="@+id/analogClock"/>

    <Button
        android:id="@+id/clockGone"
        android:textAllCaps="false"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/analogClock"
        android:layout_centerHorizontal="true"
        android:text="@string/clockGone"
        android:textSize="16sp" />

    <Button
        android:id="@+id/clockVisible"
        android:textAllCaps="false"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/clockViz"
        android:textSize="16sp"
        android:layout_below="@+id/clockGone"
        android:layout_alignStart="@+id/clockGone" />

    <Button
        android:id="@+id/clockInVisible"
        android:textAllCaps="false"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clockVisible"
        android:layout_centerHorizontal="true"
        android:text="@string/clockInViz"
        android:textSize="16sp" />
</RelativeLayout>
